@@ -1,5 +1,6 @@
 yuma (1.13-3) unstable; urgency=low
   * Fixed bug in yangdump refine-stmt validation
+  * Fixed bug in yangdump enumeration validation
   * Changed license from IWL to BSD
   * moved yuma project back to netconfcentral.org
   * combined yuma and yuma-dev packages
